Add an optional changelog URL to assets
- Move the download and edit buttons to a more logical location
  on asset detail pages.
