# app/Http/Requests/SubmitAsset.php
@@ -67,6 +67,13 @@ class SubmitAsset extends FormRequest
                 'max:2000',
                 new SuccessRespondingUrl(),
             ],
+            'changelog_url' => [
+                'nullable',
+                'bail',
+                'url',
+                'max:2000',
+                new SuccessRespondingUrl(),
+            ],
             'icon_url' => [
                 'nullable',
                 'bail',
@@ -124,6 +131,7 @@ class SubmitAsset extends FormRequest
         return [
             'browse_url' => __('repository URL'),
             'issues_url' => __('issue reporting URL'),
+            'changelog_url' => __('changelog URL'),
             'icon_url' => __('icon URL'),
             'versions.*.download_url' => __('download URL'),
         ];
