# public/developer/v1/openapi.yaml
@@ -106,6 +106,11 @@ components:
         category_id:
           type: integer
           description: The unique identifier of the category the asset belongs to.
+        changelog_url:
+          type: string
+          format: url
+          description: >
+            The asset's changelog URL.
         cost:
           type: string
           description: >
